syntax = "proto3";

option java_multiple_files = true;
option java_package = "it.polimi.ds.proto";

import "addr.proto";

message AllocationRequest {
  repeated ProtoAddress allocators = 1;
  int32 number_of_tasks = 2;
}
message AllocationResponse {}

message DataRequest {}
message DataResponse {}
