syntax = "proto3";

option java_multiple_files = true;
option java_package = "it.polimi.ds.proto";

message AllocateNodeManagerRequest { int32 count = 1; }

message AllocateNodeManagerResponse {}
